--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-    "name": "francescozanoni/zendframework1-extensions",
+    "name": "francescozanoni/zf1-extensions",
     "description": "Custom extensions of Zend Framework 1",
     "version": "1.0.0",
     "type": "library",
     "require": {
         "zendframework/zendframework1": "^1.12"
+    },
+    "autoload": {
+        "psr-0": {
+            "Fz_": "/"
+        }
     },
     "authors": [
         {
