--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
             "Fz_": ""
         }
     },
+    "include-path": [
+        ""
+    ],
     "authors": [
         {
             "name": "Francesco Zanoni",
