--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
     },
     "autoload": {
         "psr-0": {
-            "Fz_": "."
+            "Fz_": "library/"
         }
     },
     "include-path": [
-        "."
+        "library/"
     ],
     "authors": [
         {
